--- a/ss2_html/BAITAP/hobbies.html
+++ b/ss2_html/BAITAP/hobbies.html
@@ -34,7 +34,7 @@
                 <table>
                     <tr>
                         <td>
-                            <input type="checkbox" name="" id="">Thể thao
+                            <input type="checkbox" name="" id="sport">Thể thao
                         </td>
                         <td>
                             <input type="checkbox" name="" id="">Âm nhạc
