--- a/module1/ss2_html/BAITAP/FormHtml.html
+++ b/module1/ss2_html/BAITAP/FormHtml.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>FORM</title>
+    <link rel="stylesheet" href="css/FormHtml.css">
 </head>
 <body>
+
 <form action="">
     <label>Họ và tên</label>
     <br>
