--- a/module1/ss3_JavaScript/BAITAP/BienKieuDuLieu/bai2.html
+++ b/module1/ss3_JavaScript/BAITAP/BienKieuDuLieu/bai2.html
@@ -6,13 +6,10 @@
 </head>
 <body>
 <script>
-    let a = "0C";
-    a = parseInt(a);
-    let F = "0F"
-    F = parseInt(F)
-
-    let C = (a/5 = (F-32)/9);
-    document.write(C);
+    let C = prompt('nhập độ C :');
+    C = parseInt(C);
+    let F = (9*C)/5 + 32;
+    document.write(F);
 </script>
 </body>
 </html>
