--- a/module1/ss3_JavaScript/THUCHANH/CauTrucDieuKien/KiemTraNamNhuan.html
+++ b/module1/ss3_JavaScript/THUCHANH/CauTrucDieuKien/KiemTraNamNhuan.html
@@ -8,18 +8,18 @@
 <script>
    let year = prompt('nhap nam');
    year = parseInt(year);
-   if (year % 4 == 0) {
-       if (year % 100 == 0) {
-           if (year % 400 == 0) {
-               alert(year + " is a leap year");
-           } else {
-               alert(year + " is NOT a leap year");
+   if (year % 4 == 0){
+       if (year % 100 == 0){
+           if (year % 400 == 0){
+               alert(year+ " is leap year");
+           }else {
+               alert(year +" not is leap year");
            }
-       } else {
-           alert(year + " is a leap year");
+       }else {
+           alert(year+' is leap year');
        }
-   } else {
-       alert(year + " is NOT a leap year");
+   }else {
+       alert(year +' not is leap year');
    }
 
 </script>
