--- a/module1/ss3_JavaScript/BAITAP/CauTrucDieuKien02/Bai12.html
+++ b/module1/ss3_JavaScript/BAITAP/CauTrucDieuKien02/Bai12.html
@@ -5,6 +5,16 @@
     <title>Title</title>
 </head>
 <body>
+<script>
+    let tienGui = parseInt(prompt("nhập số tiền gửi "));
+    if(tienGui >= 1000000000){
+        alert("số tiền lãi = 5000000");
+    }else if (tienGui >= 100000000){
+        alert("số tiền lãi = 1000000");
+    }else {
+        alert("bạn chưa đủ điều kiện nhận lãi");
+    }
+</script>
 
 </body>
 </html>
