--- a/module1/ss3_JavaScript/BAITAP/CauTrucDieuKien02/Bai12.html
+++ b/module1/ss3_JavaScript/BAITAP/CauTrucDieuKien02/Bai12.html
@@ -7,9 +7,10 @@
 <body>
 <script>
     let tienGui = parseInt(prompt("nhập số tiền gửi "));
-    if(tienGui >= 1000000000){
+    let month = parseInt(prompt("mmời nhập số táng vay"));
+    if(tienGui >= 1000000000 && month >= 10){
         alert("số tiền lãi = 5000000");
-    }else if (tienGui >= 100000000){
+    }else if (tienGui >= 100000000 && month >= 7){
         alert("số tiền lãi = 1000000");
     }else {
         alert("bạn chưa đủ điều kiện nhận lãi");
