--- a/module1/ONTAP/b5.html
+++ b/module1/ONTAP/b5.html
@@ -6,12 +6,13 @@
 </head>
 <body>
 <script>
-for (let i = 0 ; i < 10 ; i++){
-    for (let j = 0 ; j < i ; j++){
-        document.write(j);
-    }
-    document.write("<br>")
-}
+   function sum(a,b){
+        let sum1 = a + b;
+        document.write(sum1 + "<br>" );
+       return sum1;
+   }
+   let a = 5;
+   let b = 5;
 
 </script>
 </body>
