--- a/module1/ss5_Array/Array1/THUCHANH/DaoMang.html
+++ b/module1/ss5_Array/Array1/THUCHANH/DaoMang.html
@@ -6,13 +6,9 @@
 </head>
 <body>
 <script>
-for (let i = 0 ; i < 10 ; i++){
-    for (let j = 0 ; j < i ; j++){
-        document.write(j);
-    }
-    document.write("<br>")
-}
-
+    let number = [2,4,6,5];
+    number.reverse();
+    document.write(number);
 </script>
 </body>
 </html>
