--- a/module1/ss5_Array/Array2/SuDungCacHamCoSanCuaMang/Bai1.html
+++ b/module1/ss5_Array/Array2/SuDungCacHamCoSanCuaMang/Bai1.html
@@ -6,13 +6,8 @@
 </head>
 <body>
 <script>
-for (let i = 0 ; i < 10 ; i++){
-    for (let j = 0 ; j < i ; j++){
-        document.write(j);
-    }
-    document.write("<br>")
-}
-
+    let myColor = ['red','green','black','white'];
+    document.write((myColor.join('+')))
 </script>
 </body>
 </html>
