--- a/module1/ss6_Function/BAITAP/LuyenTapSuDungHam01/Bai1.html
+++ b/module1/ss6_Function/BAITAP/LuyenTapSuDungHam01/Bai1.html
@@ -6,13 +6,11 @@
 </head>
 <body>
 <script>
-for (let i = 0 ; i < 10 ; i++){
-    for (let j = 0 ; j < i ; j++){
-        document.write(j);
+    function alertMessage() {
+        document.write("Xin chào");
     }
-    document.write("<br>")
-}
-
+    alertMessage();
 </script>
+
 </body>
 </html>
