--- a/module1/ss6_Function/BAITAP/LuyenTapSuDungHam01/Bai2.html
+++ b/module1/ss6_Function/BAITAP/LuyenTapSuDungHam01/Bai2.html
@@ -6,13 +6,12 @@
 </head>
 <body>
 <script>
-for (let i = 0 ; i < 10 ; i++){
-    for (let j = 0 ; j < i ; j++){
-        document.write(j);
+    function number(a) {
+        a++;
+        document.write(a);
     }
-    document.write("<br>")
-}
-
+    let a =5;
+    number(a);
 </script>
 </body>
 </html>
