--- a/module1/ss6_Function/BAITAP/ktSNT.html
+++ b/module1/ss6_Function/BAITAP/ktSNT.html
@@ -6,27 +6,27 @@
 </head>
 <body>
 <script>
-   function ktSNT(n) {
+    function isPrime(n) {
         if (n < 2){
             return false;
         }else {
-            for (let i =2 ; i <= Math.sqrt(n); i++){
+            for (let i = 2 ; i <= Math.sqrt(n) ; i++ ){
                 if (n % i == 0){
                     return false;
                 }
             }
         }
         return true;
-   }
-   let n = 2;
-   let count = 0;
-   while (count <= 1000){
-       if (ktSNT(n) == true){
-           document.write(n + "<br>")
-           count++
-       }
-       n++;
-   }
+    }
+    let n = 2;
+    let count = 0;
+    while (count <= 1000){
+        if (isPrime(n) == true){
+            document.write(n + "<br>");
+            count++;
+        }
+        n++;
+    }
 </script>
 </body>
 </html>
