--- a/module1/ONTAP/B6.html
+++ b/module1/ONTAP/B6.html
@@ -10,7 +10,7 @@ function kTSNT(a) {
     if(a<2){
         return false
     }else {
-        for(let i = 2; i< Math.sqrt(a); i++){
+        for(let i = 2; i<= Math.sqrt(a); i++){
             if(a%i ===0){
                 return false
             }
