--- a/module1/ONTAP/b4.html
+++ b/module1/ONTAP/b4.html
@@ -6,7 +6,26 @@
 </head>
 <body>
 <script>
-
+function checkSNT(n) {
+    if (n < 2){
+        return false;
+    }else {
+        for (let i = 2 ; i <= Math.sqrt(n);i++){
+            if (n % i == 0)
+                return false;
+        }
+    }
+    return true;
+}
+let count = 0;
+let n = 2;
+while (count <= 100){
+    if (checkSNT(n)){
+        document.write(n +"<br>");
+        count++;
+    }
+    n++;
+}
 </script>
 </body>
 </html>
