--- a/module1/ONTAP/b8.html
+++ b/module1/ONTAP/b8.html
@@ -4,16 +4,86 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
 <body>
 <script>
-    function func1(a){
-        if(a == 2){
-            return 2;
+    let Tivi = function(channel, volume){
+        this.channel = channel
+        this.volume = volume
+        this.setOnOffTivi = function (check) {
+            this.status = check
         }
-        return a * func1(a - 1);
+        this.setChannel = function (channel) {
+            this.channel = channel
+        }
+        this.getChannel = function () {
+            return this.channel
+        }
+        this.getVolume = function () {
+            return this.volume
+        }
+        this.checkTivi = function () {
+            if (this.status){
+                console.log("Tivi đã được bật")
+                console.log("Kênh hiện tại là "+this.channel)
+                console.log("Âm lượng là "+this.volume)
+            }else{
+                console.log("Tivi đã được tắt")
+            }
+        }
+
+        this.setUpVolume = function () {
+            if(this.volume<100){
+                this.volume += 5
+            }
+        }
+        this.setDownVolume = function () {
+            if (this.volume>=0){
+                this.volume -= 5
+            }
+        }
     }
-    let sum = func1(5);
-    document.write(sum);
+
+    let Remote = function () {
+        this.setTivi = function (tivi) {
+            this.tivi = tivi
+        }
+        //Chức năng bật tivi
+        this.turnOnOff = function (boolean) {
+            this.on_off = boolean
+            this.tivi.setOnOffTivi(this.on_off)
+            if (boolean){
+                console.log("Bật tivi")
+            }else{
+                console.log("Tắt tivi")
+            }
+        }
+        //chức năng chuyển kênh
+        this.changeChannel = function (changeChannel) {
+            this.channelS = changeChannel
+            this.tivi.setChannel(this.channelS)
+            console.log("Đã chuyển sang kênh "+this.channelS)
+        }
+        //Tăng âm lượng
+        this.changeVolumeUp = function () {
+            this.tivi.setUpVolume()
+            console.log("Đã tăng âm lượng tivi xuống 5 đơn vị")
+        }
+        //Giảm âm lượng
+        this.changeVolumeDown = function () {
+            this.tivi.setDownVolume()
+            console.log(this.tivi.getVolume())
+            console.log("Đã giảm âm lượng tivi lên 5 đơn vi")
+        }
+        //Check tivi
+        this.checkTV = function () {
+            this.tivi.checkTivi()
+        }
+    }
+
+    let sony = new Tivi("vtv3", 20)
+    let remote = new Remote()
+    remote.setTivi(sony)
 </script>
 </body>
 </html>
