--- a/module1/ONTAP/b1.html
+++ b/module1/ONTAP/b1.html
@@ -5,28 +5,23 @@
     <title>Title</title>
 </head>
 <body>
+<input type="text" name="" id="input">
+<button type="button" onclick="display()">Check</button>
+<div id="result"></div>
 <script>
-   function ktSNT(n) {
-        if (n < 2){
-            return false;
-        }else {
-            for (let i =2 ; i <= Math.sqrt(n); i++){
-                if (n % i == 0){
-                    return false;
-                }
+    let arrVn = ['xin chào','mẹ','lợn','chó','mèo','gà'];
+    let arrEng =['Hello',"mother","pig","Dog","Cat",'chicken'];
+    function display() {
+        let check = document.getElementById('input').value;
+        let result = " ";
+        for (let i = 0; i < arrVn.length;i++){
+            if (check == arrVn[i]){
+                result = arrEng[i];
             }
         }
-        return true;
-   }
-   let n = 2;
-   let count = 0;
-   while (count <= 1000){
-       if (ktSNT(n) == true){
-           document.write(n + "<br>")
-           count++
-       }
-       n++;
-   }
+        document.getElementById('result').innerHTML=result;
+    }
+
 </script>
 </body>
 </html>
