--- a/module1/ONTAP/b5.html
+++ b/module1/ONTAP/b5.html
@@ -5,47 +5,53 @@
     <title>Title</title>
 </head>
 <body>
-<canvas id="myCanvas" style ="border: 2px solid #d3d3d3;" width=1000 height="600"></canvas>
-
 <script>
-    let MyCircles = function (x, y, radius) {
-        this.x = x
-        this.y = y
-        this.radius = radius
-
-    }
-
-    function getRandomHex() {
-        return Math.floor(Math.random()*255)
-    }
-
-    function getColorRandom() {
-        let red = getRandomHex();
-        let green = getRandomHex();
-        let blue = getRandomHex();
-        return "rgb(" + red + "," + blue + "," + green +")";
-    }
-
-    function createCircle() {
-        let context = document.getElementById("myCanvas").getContext("2d")
-        let radius = Math.floor(Math.random()*80)
-        let color = getColorRandom()
-        let x = Math.random() * window.innerWidth
-        let y = Math.random() * window.innerHeight
-        let circles = new MyCircles(x, y, radius)
-        context.beginPath()
-        context.arc(circles.x, circles.y, circles.radius, 0, 2*Math.PI)
-        context.fillStyle = color
-        context.fill()
-    }
-
-    function createMultyCircle(){
-        for (let i=0;i< 30;i++){
-            createCircle()
+    class Battery{
+        constructor(energy) {
+            this.energy = energy;
+        }
+        setEnergy(newEnergy){
+            this.energy = newEnergy;
+        }
+        getEnergy(){
+            return this.energy;
+        }
+        DecreaseEnergy(){
+            if (this.energy == 100){
+                document.write('giam nang luong')
+                this.energy--
+            }
         }
     }
-    createMultyCircle()
-
+    class FlashLamp{
+        constructor(battery) {
+            this.status = true;
+            this.battery = battery;
+        }
+        setBattery(newBattery){
+            this.battery = newBattery;
+        }
+        getBatteryInfo(){
+            return this.battery;
+        }
+        light(){
+            this.status = true;
+        }
+        turnOn(){
+            if (this.status == true){
+                document.write('den sang');
+            }
+        }
+        turnOff(){
+            if (this.status == false){
+                document.write('den tat');
+            }
+        }
+    }
+    let battery = new Battery(100){
+        battery.setEnergy(100);
+        battery.decreaseEnergy();
+    }
 </script>
 </body>
 </html>
